--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bankart/bankart-php-client",
+    "name": "bojmaliev/nlb-payment",
     "description": "Bankart Client for PHP",
     "keywords": [
         "bankart"
