--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
     },
     "scripts": {
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
